--- a/02-nodejs/package.json
+++ b/02-nodejs/package.json
@@ -21,7 +21,8 @@
     "testTimeout": 10000
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "uuid": "^9.0.0"
   }
 }
